fix border spacing

--- a/themes/knives-forks-theme/sass/_information-blurbs.scss
+++ b/themes/knives-forks-theme/sass/_information-blurbs.scss
@@ -70,7 +70,7 @@
   flex-direction: column;
   margin-top: 60px;
   width: 90%;
-  margin: 60px auto 100px auto;
+  margin: 60px auto 60px auto;
   @include tablet {
     width: 87%;
   }
